<resources>
    <string name="app_name">betime.ly</string>
    <string name="recommendation_title"><b>Recommended alarm</b></string>
    <string name="recommendation_title_with_date"><b>Recommended alarm for %1$s</b></string>
    <string name="tomorrow_events_title"><b>Tomorrow</b></string>

    <!--Menu-->
    <string name="alarms">Alarms</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>

    <!--Formats-->
    <string name="alarm_time_format_24">HH:mm</string>
    <string name="alarm_time_format_12">hh:mm</string>
    <string name="alarm_period_format">a</string>
    <string name="alarm_title_format">MMMM dd yyyy</string>
    <string name="event_date_format">MMMM dd yyyy (eee)</string>

    <string name="repeat_everyday">Everyday</string>
    <string name="repeat_non">Never repeat</string>
    <string name="repeat_delimiter">&#160;|&#160;</string>

    <string name="show_more">Show more</string>
    <string name="event_start">Event start: </string>
    <string name="event_end">Event end: </string>


    <string name="edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>

    <string name="label">Label:</string>
    <string name="label_hint">Display while ringing</string>
    <string name="repeat">Repeat:</string>

    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="stop">🙀 Hold to stop 😹</string>
    <string name="snooze">😿 Snooze 😿</string>
    <string name="logo_alt">Our beautiful mascot Betimely-chan</string>

    <!--Settings-->
    <string name="hour_format_24">Use 24-hour format</string>
    <string name="snooze_settings">Snooze time (minutes)</string>
    <string name="max_ring_settings">Max ringing time</string>
    <string name="vibrate_settings">Vibrate</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="sound_pick_title">Select sound</string>
    <string name="number">Number</string>
    <string name="channel_name">betime.ly</string>
    <string name="channel_description">Desc</string>
    <string name="alarm_rang_too_long">The alarm rang for too long.</string>
    <string name="cancelled_alarm_notif_msg">You had an alarm at %1$s</string>
    <string name="share">Share</string>
    <string name="event_share_title">Event: %1$s</string>

    <!--Tutorial-->
    <string name="start">Start</string>
    <string name="tutorial_slide1_title">Hello!</string>
    <string name="tutorial_slide1_desc">We are an alarm app; you know how it works.         But we also create alarms for you!</string>
    <string name="tutorial_slide2_title">Automatic alarms!</string>
    <string name="tutorial_slide2_desc">You can see your events for tomorrow and alarm we created based on these events. You can even turn it off!</string>
    <string name="tutorial_slide3_title">There\'s more!</string>
    <string name="tutorial_slide3_desc">Or look in the calendar to see what\'s happening in the future. And see when we think it is best for you to wake up.</string>
    <string name="next">Go to next</string>
    <string name="skip">Skip</string>
    <string name="open_from_notification">Open</string>
    <string name="generated">Generated</string>
    <string name="notification_available_alarm_no_event">A new alarm is available because you do not have any events in the morning.</string>
    <string name="notification_available_alarm_with_event">A new alarm is available because you have \"%1$s\" in the morning at %2$s.</string>
    <string name="notification_new_alarm_title">Generated alarm was changed</string>
    <string name="notification_new_alarm_no_event">A new alarm is set to %1$s because you do not have any events in the morning.</string>
    <string name="notification_new_alarm_event">A new alarm is set because you have \"%1$s\" in the morning at %2$s.</string>

</resources>
