<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.AlarmFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/timePicker"
            style="@style/TimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/labelContainer"
            style="@style/AlarmForm.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/AlarmForm.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label" />

            <EditText
                android:id="@+id/labelText"
                style="@style/AlarmForm.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint"
                android:inputType="text"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeatContainer"
            style="@style/AlarmForm.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">
            <TextView
                style="@style/AlarmForm.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />

            <TextView
                android:id="@+id/repeatValue"
                style="@style/AlarmForm.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>